Bug 593948 - System integration - Default mail client setting not integrated well; r=mkmelin