mail/components/shell/nsMailGNOMEIntegration.h
@@ -61,9 +61,11 @@ protected:
   PRBool checkDefault(const char* const *aProtocols, unsigned int aLength);
   nsresult MakeDefault(const char* const *aProtocols, unsigned int aLength);
 private:
+  PRBool GetAppPathFromLauncher();
   PRPackedBool mUseLocaleFilenames;
   PRPackedBool mCheckedThisSession;
   nsCString mAppPath;
+  PRPackedBool mAppIsInPath;
 };
 
 #endif
